--- a/App.axaml
+++ b/App.axaml
@@ -1,12 +1,26 @@
+<!-- https://github.com/AvaloniaUtils/DialogHost.Avalonia DIALOG HOST CONTROLS HELPER-->
+<!-- https://github.com/AvaloniaCommunity/Material.Avalonia/tree/master MATERIAL AVALONIA THEME--> 
+
+
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="VibeNine.App"
+             x:Class="VibeOne.App"
+             xmlns:local="clr-namespace:VibeOne"
+             xmlns:themes="clr-namespace:Material.Styles.Themes;assembly=Material.Styles"
+             xmlns:dialog="clr-namespace:DialogHostAvalonia;assembly=DialogHost.Avalonia"
              xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              RequestedThemeVariant="Dark">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
+    <!-- <Application.DataTemplates> -->
+    <!--     <local:ViewLocator /> -->
+    <!-- </Application.DataTemplates> -->
+    
+    
     <Application.Styles>
         <FluentTheme />
+        <!-- <themes:MaterialTheme PrimaryColor="Blue" SecondaryColor="DeepOrange" /> -->
         <materialIcons:MaterialIconStyles />
+        <dialog:DialogHostStyles />
     </Application.Styles>
 </Application>
