--- a/Views/TankDetailsView.axaml
+++ b/Views/TankDetailsView.axaml
@@ -4,26 +4,47 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:VibeOne.ViewModels"
              xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
-             xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.Avalonia;assembly=LiveChartsCore.SkiaSharpView.Avalonia"
+             xmlns:views="clr-namespace:VibeOne.Views"
              mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="400"
              x:Class="VibeOne.Views.TankDetailsView"
              x:DataType="viewModels:TankDetailsViewModel">
 
-
     <Grid ColumnDefinitions="Auto, *"
-          RowDefinitions="Auto, Auto">
+          RowDefinitions="Auto, *">
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="65%, 0%" EndPoint="50%,100%">
+                <GradientStop Color="CadetBlue" Offset="0"></GradientStop>
+                <GradientStop Color="DodgerBlue" Offset="1"></GradientStop>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Button Command="{Binding NavigateBack}"
                 Height="50"
-                Width="50"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top">
+                Width="50">
             <Button.Content>
                 <avalonia:MaterialIcon Kind="ArrowBack"></avalonia:MaterialIcon>
             </Button.Content>
         </Button>
-        <TextBlock Text="Tank Details" Grid.Row="0" Grid.Column="1"
+        <TextBlock Text="PLACEHOLDER"
+                   Grid.Row="0"
+                   Grid.Column="1"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
-                   FontSize="15" FontWeight="Black" />
+                   FontSize="15" FontWeight="Black"
+                   Margin="-50,0,0,0" /><!-- NEGATIVE MARGIN FOR CENTERING -->
+        <!-- END OF HEADER AND BACK BUTTON -->
+        <UniformGrid
+            Grid.Row="1"
+            Grid.Column="1"
+            Rows="1"
+            Columns="2">
+            <views:DetailsTempPanel
+                Margin="0,12,0,0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch" />
+            <views:DetailsTodayPanel
+                Margin="10,0,10,10"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch" />
+        </UniformGrid>
     </Grid>
 </UserControl>
